switched from sockets to http server